Fixed alignment with captions

--- a/style.less
+++ b/style.less
@@ -829,7 +829,8 @@ article.sticky{
 
 	.wp-caption{
 		max-width: 100%;
-		margin: 5px 0 30px 0;
+		margin-top: 5px;
+		margin-bottom: 30px;
 		border: 1px solid #E0E0E0;
 		padding: 8px;
 		box-shadow: 0 1px 2px rgba(0,0,0,0.09);
